Revision history for Perl extension Module::Build.

0.32_01 - 

 Bug-fixes:
 - Module::Build::Compat had stopped adding "PL_FILES => {}" when no
   PL_files property was set in Build.PL; restored old behavior and fixed
   tests and documentation related to this issue [David Golden]

0.32 - Wed Feb 25 17:40:02 PST 2009

 No changes since 0.31_04.

0.31_04 - Fri Feb 20 11:04:59 PST 2009

 Other
 - Bumped Test::Harness prereq to 3.16 for latest PERL5LIB fixes (solves
   test failures when installing Module::Build using CPANPLUS::Dist::Build)
   [David Golden]

0.31_03 - Sun Feb  8 14:54:01 PST 2009

 Enhancements
 - added a "prereq_data" action that prints a Perl data structure of
   all prerequisites; can be loaded by external tools using eval()
   [David Golden]

 Bug-fixes
 - 'fakeinstall' action warns and skips without ExtUtils::Install 1.32+
   [David Golden, reported by Zefram]
 - allows Module::Build version mismatch when installing self; works around
   limitations in CPANPLUS::Dist::Build [David Golden]

0.31_02 - Tue Jan 27 09:16:43 PST 2009

 Other
 - tests now use File::Temp (added to build_requires); appears to fix
   Win32 testing heisenbug on directory removal during high system loads
 - use_tap_harness.t will skip unless a release version of TAP::Harness
   is installed
 - improved diagnostics to ensure_blib() tests in t/lib/MBTest.pm

 Compat
 - passthrough Makefile.PL will now play nice with cpantesters' on
   exit(0) (RT#32018) [Eric Wilhelm]

 Bug Fixes
 - fix for doubling-up of --prefix (RT#19951)

0.31012 - Wed Jan 14 01:36:19 PST 2009

 Bug Fixes
 - t/tilde.t maybe actually fixed on MSWin32 now.

0.31011 - Mon Jan 12 21:57:04 PST 2009

 Bug Fixes
 - t/tilde.t had been failing on MSWin32 (RT#42349)

0.3101 - Mon Jan 12 13:52:36 PST 2009

 Other
 - added 'mirbsd' as a Unix-type OS [BinGOs]
 - added 'haiku' as a Unix-type OS (backported from bleadperl)
 - skips certain tests on VMS (backported from bleadperl)